--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 				android:name=".ui.users.UserDetailActivity"
 				android:label="@string/title_user_detail"
 				android:parentActivityName=".ui.users.UserListActivity"
-				android:theme="@style/AppTheme.Translucent">
+				android:theme="@style/AppTheme.NoActionBar">
 			<meta-data
 					android:name="android.support.PARENT_ACTIVITY"
 					android:value="com.ntt.kchallenge.ui.users.UserListActivity"/>
